# Sorter-Visualisation

./: CMakeLists.txt  README.md
src/: main.cpp
src/columns/: column.cpp  column.h
src/sorters/: base_sorter.h  bubble_sorter.cpp  cocktail_sorter.cpp  gnome_sorter.cpp  selection_sorter.cpp
src/view/: column_listener.h  view.cpp  view.h
